0025576: Visualization - implement AIS_ConnectedInteractive::AcceptDisplayMode()

by redirecting to myReference->AcceptDisplayMode().